--- a/index-START.html
+++ b/index-START.html
@@ -11,6 +11,29 @@
     <h1 contenteditable>🔥WOAH!</h1>
   </div>
 
+  <script>
+
+    const divHero = document.querySelector(".hero");
+    const heroText = divHero.querySelector("h1");
+
+
+    function mousHandler(e) {
+      let {offsetX, offsetY} = e;
+
+      if(this !== e.target) {
+        offsetX +=  e.target.offsetLeft;
+        offsetY +=  e.target.offsetTop;
+      }
+      console.log(offsetX/this.offsetWidth,offsetY/this.offsetHeight);
+    }
+
+    divHero.addEventListener("mousemove",mousHandler)
+
+  </script>
+
+
+
+
   <style>
   html {
     color: black;
