--- a/index-START.html
+++ b/index-START.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="hero">
-    <h1 contenteditable>🔥WOAH!</h1>
+    <h1 contenteditable>Apple-ovob!</h1>
   </div>
 
   <script>
@@ -24,8 +24,8 @@
         offsetX +=  e.target.offsetLeft;
         offsetY +=  e.target.offsetTop;
       }
-      const shadowX = ((offsetX/this.offsetWidth)*shadowValue) * 2 - shadowValue;
-      const shadowY = ((offsetY/this.offsetHeight)*shadowValue) * 2 - shadowValue;
+      const shadowX = ((offsetX/ this.offsetWidth)*shadowValue) * 2 - shadowValue;
+      const shadowY = ((offsetY/ this.offsetHeight)*shadowValue) * 2 - shadowValue;
 
       heroText.style.textShadow = `
       ${shadowX}px ${shadowY}px 0 rgba(255,0,255,0.7),
